--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         width: 640,
         height: 320,
         scene			// 等同於 scene: scene
+
+    }
+
+    //載入素材 
+    scene.preload = function () {
+        this.load.image('bg', './img/background.webp');
+    }
+
+    // 建立地圖
+    scene.create = function () {
+        let bg = this.add.sprite(0, 0, 'bg')
+
+        //取得寬高
+        let width = this.sys.game.config.width
+        let height = this.sys.game.config.height
+        bg.setPosition(width / 2, height / 2)
     }
 
     let game = new Phaser.Game(config)
