--- a/index.html
+++ b/index.html
@@ -26,17 +26,40 @@
 
     //載入素材 
     scene.preload = function () {
-        this.load.image('bg', './img/background.webp');
+        this.load.image('bg1', './img/background.webp');
+        this.load.image('bg2', './img/background2.webp');
     }
 
     // 建立地圖
     scene.create = function () {
-        let bg = this.add.sprite(0, 0, 'bg')
+        let bg = this.add.sprite(0, 0, 'bg1')
 
         //取得寬高
         let width = this.sys.game.config.width
         let height = this.sys.game.config.height
         bg.setPosition(width / 2, height / 2)
+    }
+
+    let gameTime = 0;
+    //更新畫面
+    scene.update = function () {
+        gameTime++;
+        if (gameTime === 1000) {
+            let bg = this.add.sprite(0, 0, 'bg2')
+
+            //取得寬高
+            let width = this.sys.game.config.width
+            let height = this.sys.game.config.height
+            bg.setPosition(width / 2, height / 2)
+        } else if (gameTime === 2000) {
+            gameTime = 0;
+            let bg = this.add.sprite(0, 0, 'bg1')
+
+            //取得寬高
+            let width = this.sys.game.config.width
+            let height = this.sys.game.config.height
+            bg.setPosition(width / 2, height / 2)
+        }
     }
 
     let game = new Phaser.Game(config)
