--- a/index.html
+++ b/index.html
@@ -28,38 +28,52 @@
     scene.preload = function () {
         this.load.image('bg1', './img/background.webp');
         this.load.image('bg2', './img/background2.webp');
+        this.load.image('player', './img/GG.gif');
     }
 
     // 建立地圖
     scene.create = function () {
-        let bg = this.add.sprite(0, 0, 'bg1')
+        let bg = this.add.sprite(0, 0, 'bg2')
 
         //取得寬高
         let width = this.sys.game.config.width
         let height = this.sys.game.config.height
         bg.setPosition(width / 2, height / 2)
+
+        this.player = this.add.sprite(50, 223, 'player')
+        this.player.setAngle(20)
     }
 
-    let gameTime = 0;
+    scene.init = function () {
+        // 設定 player 的速度
+        this.playerSpeed = 1
+    }
+
+
     //更新畫面
     scene.update = function () {
-        gameTime++;
-        if (gameTime === 1000) {
-            let bg = this.add.sprite(0, 0, 'bg2')
-
-            //取得寬高
-            let width = this.sys.game.config.width
-            let height = this.sys.game.config.height
-            bg.setPosition(width / 2, height / 2)
-        } else if (gameTime === 2000) {
-            gameTime = 0;
-            let bg = this.add.sprite(0, 0, 'bg1')
-
-            //取得寬高
-            let width = this.sys.game.config.width
-            let height = this.sys.game.config.height
-            bg.setPosition(width / 2, height / 2)
+        if (this.input.activePointer.isDown) {
+            this.player.x += this.playerSpeed
         }
+
+        // this.player.angle += 0.5
+        // gameTime++;
+        // if (gameTime === 1000) {
+        //     let bg = this.add.sprite(0, 0, 'bg2')
+
+        //     //取得寬高
+        //     let width = this.sys.game.config.width
+        //     let height = this.sys.game.config.height
+        //     bg.setPosition(width / 2, height / 2)
+        // } else if (gameTime === 2000) {
+        //     gameTime = 0;
+        //     let bg = this.add.sprite(0, 0, 'bg1')
+
+        //     //取得寬高
+        //     let width = this.sys.game.config.width
+        //     let height = this.sys.game.config.height
+        //     bg.setPosition(width / 2, height / 2)
+        // }
     }
 
     let game = new Phaser.Game(config)
