--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     let game = new Phaser.Game(config)
 
-    game.scene.add('runScene', runScene);
+    game.scene.add('runScene', scene1);
 
     game.scene.start('runScene');
 </script>
