--- a/game2.html
+++ b/game2.html
@@ -5,15 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style/loadInit.css">
     <title>Game2</title>
 </head>
 
 <body>
     <div id="app"></div>
 
+    <script src="./lib/loadInit.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
     <script src="./lib/alpacaScene.js"></script>
     <script>
+        window.onload = function () {
+            function resize() {
+                let canvas = document.querySelector('canvas')
+                let ww = window.innerWidth
+                let wh = window.innerHeight
+                let wRatio = ww / wh
+                let gameRatio = config.width / config.height
+                if (wRatio < gameRatio) {
+                    canvas.style.width = ww + 'px'
+                    canvas.style.height = (ww / gameRatio) + 'px'
+                } else {
+                    canvas.style.width = (wh * gameRatio) + 'px'
+                    canvas.style.height = wh + 'px'
+                }
+            }
+            resize()
+            window.addEventListener('resize', resize, false)	// 偵聽事件 resize
+        }
+
         // 宣告一個場景
         let scene = new alpacaScene();
         // 宣告場景的基本資訊
